# attitudeMathLibrary

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Quaternion.md  README.md  generate_doxygen.sh  infographic.html  infographic_v2.html
include/attitude/: attitude_utils.h  dcm.h  euler.h  quaternion.h  vector3.h
src/: .euler.c.swp  attitude_utils.c  dcm.c  euler.c  quaternion.c  vector3.c
tests/: .test_euler_random.c.swp  test_attitude.c  test_attitude_degrees.c  test_dcm_orthogonal.c  test_euler.c  test_euler_random.c  test_quaternion.c  test_quaternion_inverse_axis.c  test_quaternion_relative.c  test_quaternion_rotate.c  test_quaternion_rotate_explicit_demo.c  test_quaternion_slerp.c  test_rotation.c
tests/reference/: test_scipy_quaternion_parity.py
